Update container spacing based on screen size. Fix bug with mobile menu at 768px. Fix layout of shortener for mobile/tablet.

--- a/src/components/UI/Container.module.css
+++ b/src/components/UI/Container.module.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1000px) {
   .container {
     width: 77%;
   }
