--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -5,6 +5,12 @@
 
 @media (min-width: 768px) {
   .header {
+    height: 990px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .header {
     height: 800px;
   }
 }
