--- a/src/components/header/NavMenu.module.css
+++ b/src/components/header/NavMenu.module.css
@@ -77,7 +77,6 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    margin-left: 32px;
     gap: 0px;
   }
 }
