--- a/src/components/main/Shortener.module.css
+++ b/src/components/main/Shortener.module.css
@@ -10,14 +10,20 @@
   font-family: inherit;
 }
 
+.shortener form {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 .shortener input {
   display: block;
-  width: 100%;
   height: 3rem;
-  border: none;
+  width: 100%;
   padding: 0.5rem 1rem;
   margin-bottom: 1rem;
   border-radius: 5px;
+  border: none;
   font-size: 1rem;
   font-weight: 500;
   letter-spacing: 0.12px;
@@ -25,9 +31,35 @@
 }
 
 .shortener button {
-  width: 100%;
-  font-size: 18px;
+  font-size: 1.125rem;
 }
 
-.section {
+@media (min-width: 1000px) {
+  .shortener {
+    background: url("../../assets/bg-shorten-desktop.svg"), #3a3054;
+    height: 168px;
+    padding: 52px 64px;
+    margin-top: -84px;
+  }
+
+  .shortener form {
+    flex-direction: row;
+    align-items: center;
+    height: 4rem;
+  }
+
+  .shortener input {
+    height: 100%;
+    width: 100%;
+    margin-bottom: 0;
+    font-size: 1.25rem;
+  }
+
+  .shortener button {
+    height: 100%;
+    width: 100%;
+    max-width: 11.75rem;
+    margin-left: 1.5rem;
+    font-size: 1.25rem;
+  }
 }
